POWR-145 Reconfigured the view to output well-formed list group items with badges.

--- a/web/sites/default/config/views.view.group_content_menu.yml
+++ b/web/sites/default/config/views.view.group_content_menu.yml
@@ -70,16 +70,15 @@ display:
         options:
           grouping: {  }
           row_class: ''
-          default_row_class: true
-          uses_fields: false
+          default_row_class: false
       row:
         type: fields
         options:
           default_field_elements: true
           inline:
-            type: type
             nid: nid
-          separator: ''
+            type: type
+          separator: ' '
           hide_empty: false
       fields:
         field_shortname_or_acronym:
@@ -153,7 +152,7 @@ display:
           group_type: count_distinct
           admin_label: ''
           label: ''
-          exclude: false
+          exclude: true
           alter:
             alter_text: false
             text: ''
@@ -188,7 +187,7 @@ display:
           element_label_colon: false
           element_wrapper_type: ''
           element_wrapper_class: ''
-          element_default_classes: true
+          element_default_classes: false
           empty: ''
           hide_empty: false
           empty_zero: false
@@ -226,10 +225,10 @@ display:
           label: ''
           exclude: false
           alter:
-            alter_text: false
-            text: ''
-            make_link: true
-            path: 'group/{{ field_shortname_or_acronym }}/{{ type }}'
+            alter_text: true
+            text: '<a href="/group/{{ field_shortname_or_acronym|lower }}/{{ type|lower }}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">{{ type }}<span class="badge badge-primary badge-pill">{{ nid }}</span></a>'
+            make_link: false
+            path: ''
             absolute: false
             external: false
             replace_spaces: false
