POWR-126 Added Swiftype module and added search block to the header form region.

--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,7 @@
         "drupal/restui": "^1.0",
         "drupal/search_api_page": "^1.0",
         "drupal/search_api_solr": "1.x-dev",
+        "drupal/swiftype": "^1.0",
         "drupal/textarea_widget_for_text": "^1.1",
         "drupal/twig_tweak": "^2.0",
         "drupal/views_bootstrap": "^3.0",
