--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -18,7 +18,6 @@ module:
   contact_storage: 0
   content_moderation: 0
   contextual: 0
-  copyright_block: 0
   crop: 0
   ctools: 0
   ctools_block: 0
@@ -33,7 +32,6 @@ module:
   entity_embed: 0
   entity_reference: 0
   entity_reference_revisions: 0
-  facets: 0
   field: 0
   field_ui: 0
   file: 0
@@ -98,6 +96,7 @@ module:
   shortcut: 0
   simple_oauth: 0
   simple_oauth_extras: 0
+  swiftype_integration: 0
   system: 0
   taxonomy: 0
   telephone: 0
