--- a/web/sites/default/config/node.type.city_service.yml
+++ b/web/sites/default/config/node.type.city_service.yml
@@ -8,7 +8,7 @@ third_party_settings:
   menu_ui:
     available_menus: {  }
     parent: ''
-name: Service
+name: 'City service'
 type: city_service
 description: 'The community must complete one or more steps with a city service usually ending in the action of filling out a form (online or in person), sending an email, calling a phone number, or visiting a location. A city service does not have news or events associated with it though it can belong to a program that does. We may added external services that the community might want to find on the city website in a future version.'
 help: ''
