--- a/web/sites/default/config/block.block.policiesanddisclaimers.yml
+++ b/web/sites/default/config/block.block.policiesanddisclaimers.yml
@@ -1,4 +1,4 @@
-uuid: 4faeef09-f133-48ac-9b96-4d173498a430
+uuid: f54932c8-c05d-4844-bca3-0059b522bbb2
 langcode: en
 status: true
 dependencies:
@@ -20,6 +20,6 @@ settings:
   provider: block_content
   label_display: '0'
   status: true
-  info: 'This block contains policies and disclaimers.'
+  info: ''
   view_mode: full
 visibility: {  }
