--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -119,5 +119,4 @@ twig_tweak: 2.0.0
 link_class: 1.3.0
 masquerade: 0.0.0
 unified_twig_ext: 0.0.0
-copyright_block: 1.0.0-rc2
-facets: 0.0.0
+swiftype_integration: 1.0.0
