CI caching test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,14 @@ save_cache: &save_cache
 behat_tests: &behat_tests
   <<: *defaults
   steps:
+    - restore_cache:
+        keys:
+          - source
     - checkout
+    - save_cache:
+        key: source
+        paths:
+          - ".git"
     - restore_cache: *restore_cache
     - run:
         name: Composer install
