--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,11 @@ restore_cache: &restore_cache
 save_cache: &save_cache
   paths:
     - ./vendor
+    - ./web/core
+    - ./web/modules/contrib
+    - ./web/profiles/contrib
+    - ./web/themes/contrib
+    - ./web/libraries
   key: v1-dependencies-{{ checksum "composer.lock" }}
 
 #Jobs
