--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,12 +47,27 @@ behat_tests: &behat_tests
           # Remove any remaining dependencies. Install all packages form package.json 
           composer config --global --auth github-oauth.github.com "$COMPOSER_TOKEN"
           rm -rf vendor web/core web/vendor web/modules/contrib web/themes/contrib && composer install --no-interaction
+    - restore_cache:
+        working_directory: /tmp
+        keys:
+          - terminus_and_behat-{{ checksum "composer.lock" }}
+    - run:
+        name: Install Terminus and Behat
+        working_directory: /tmp
+        command: |
+          curl -O https://raw.githubusercontent.com/pantheon-systems/terminus-installer/master/builds/installer.phar && php installer.phar install
+          composer require behat/behat:^3.4 behat/mink:^1.7 behat/mink-extension:v2.2 behat/mink-selenium2-driver:^1.3 bex/behat-screenshot:^1.2 jcalderonzumba/mink-phantomjs-driver:~0.3.1  drupal/drupal-extension:^3.4 guzzlehttp/guzzle:^6.0@dev
+    - save_cache:
+        key: terminus_and_behat-{{ checksum "composer.lock" }}
+        working_directory: /tmp
+        paths:
+          - "./vendor"
     - run:
         name: Deploy to Pantheon
+        working_directory: /var/www/html
         when: on_success
         command: |
           export PATH=/tmp/vendor/bin:/var/www/html/vendor/bin:$PATH
-          cd /tmp && curl -O https://raw.githubusercontent.com/pantheon-systems/terminus-installer/master/builds/installer.phar && php installer.phar install
           cd /var/www/html
           # Don't check the repo host key
           export GIT_SSH_COMMAND="ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no"
@@ -136,10 +151,10 @@ behat_tests: &behat_tests
           fi
     - run:
         name: Run tests against Pantheon
+        working_directory: /var/www/html
         when: on_success
         command: |
-          cd /var/www/html && export PATH=/var/www/html/vendor/bin:$PATH
-          composer require behat/behat:^3.4 behat/mink:^1.7 behat/mink-extension:v2.2 behat/mink-selenium2-driver:^1.3 bex/behat-screenshot:^1.2 jcalderonzumba/mink-phantomjs-driver:~0.3.1  drupal/drupal-extension:^3.4 guzzlehttp/guzzle:^6.0@dev
+          export PATH=/tmp/vendor/bin:/var/www/html/vendor/bin:$PATH
           if [[ $CIRCLE_BRANCH = "master" ]]; then
             echo 'export BEHAT_PARAMS="{\"extensions\" : {\"Behat\\\MinkExtension\" : {\"base_url\" : \"https://${HTTP_AUTH}@dev-portlandor.pantheonsite.io\"}}}"' >> $BASH_ENV && source $BASH_ENV
           else
