--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,7 @@ behat_tests: &behat_tests
           # Remove any remaining dependencies. Install all packages form package.json 
           composer config --global --auth github-oauth.github.com "$COMPOSER_TOKEN"
           rm -rf vendor web/core web/vendor web/modules/contrib web/themes/contrib && composer install --no-interaction
+    - save_cache: *save_cache
     - restore_cache:
         working_directory: /tmp
         keys:
@@ -55,7 +56,7 @@ behat_tests: &behat_tests
         name: Install Terminus and Behat
         working_directory: /tmp
         command: |
-          curl -O https://raw.githubusercontent.com/pantheon-systems/terminus-installer/master/builds/installer.phar && php installer.phar install
+          cd /tmp && curl -O https://raw.githubusercontent.com/pantheon-systems/terminus-installer/master/builds/installer.phar && php installer.phar install
           composer require behat/behat:^3.4 behat/mink:^1.7 behat/mink-extension:v2.2 behat/mink-selenium2-driver:^1.3 bex/behat-screenshot:^1.2 jcalderonzumba/mink-phantomjs-driver:~0.3.1  drupal/drupal-extension:^3.4 guzzlehttp/guzzle:^6.0@dev
     - save_cache:
         key: terminus_and_behat-{{ checksum "composer.lock" }}
@@ -162,7 +163,6 @@ behat_tests: &behat_tests
           fi
           # echo $BEHAT_PARAMS
           behat -c tests/behat.yml
-    - save_cache: *save_cache
     - store_test_results:
         path: /var/www/html/artifacts/behat
     - store_artifacts:
