CI caching test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,9 +123,10 @@ behat_tests: &behat_tests
             fi
           else
             # Check if the multidev branch site exists. If not, create it
-            terminus multidev:list --format=list --field=Name portlandor > ./env_list.txt
+            terminus multidev:list --format=list --field=Name portlandor > ./env_list.txt && HAS_MULTIDEV = 0
             if grep -Fxq "$CIRCLE_BRANCH" ./env_list.txt; then
               echo "Found multidev site"
+              HAS_MULTIDEV = 1
               # terminus multidev:delete --delete-branch portlandor.$CIRCLE_BRANCH -y
               # Cloning files and DB from TEST environment to the multidev environment
               terminus env:clone-content portlandor.test "$CIRCLE_BRANCH" -y 
@@ -142,7 +143,11 @@ behat_tests: &behat_tests
             # Pantheon site will use the wrong DB if the local is kept
             git rm --cache  web/sites/default/settings.local.php --ignore-unmatch && git rm -r --cache web/sites/default/files --ignore-unmatch && git commit -m "CircleCI deployment" --quiet
             # git filter-branch -f --index-filter 'git rm -rf --cached --ignore-unmatch sites/default/files' --prune-empty -- afc758c6..HEAD
-            git push -f pantheon $CIRCLE_BRANCH
+            if (( $HAS_MULTIDEV == 1 )); then
+              git push pantheon $CIRCLE_BRANCH
+            else
+              git push -f pantheon $CIRCLE_BRANCH
+            fi
             # Wake up the multidev site
             terminus env:wake portlandor.$CIRCLE_BRANCH
             # The following two drush commands will fail without wait for a few seconds
