CI caching test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,10 +123,10 @@ behat_tests: &behat_tests
             fi
           else
             # Check if the multidev branch site exists. If not, create it
-            terminus multidev:list --format=list --field=Name portlandor > ./env_list.txt && HAS_MULTIDEV = 0
+            terminus multidev:list --format=list --field=Name portlandor > ./env_list.txt && export HAS_MULTIDEV = 0
             if grep -Fxq "$CIRCLE_BRANCH" ./env_list.txt; then
               echo "Found multidev site"
-              HAS_MULTIDEV = 1
+              export HAS_MULTIDEV = 1
               # terminus multidev:delete --delete-branch portlandor.$CIRCLE_BRANCH -y
               # Cloning files and DB from TEST environment to the multidev environment
               terminus env:clone-content portlandor.test "$CIRCLE_BRANCH" -y 
