CI caching test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -143,6 +143,7 @@ behat_tests: &behat_tests
             git rm --cache  web/sites/default/settings.local.php --ignore-unmatch && git rm -r --cache web/sites/default/files --ignore-unmatch && git commit -m "CircleCI deployment" --quiet
             # git filter-branch -f --index-filter 'git rm -rf --cached --ignore-unmatch sites/default/files' --prune-empty -- afc758c6..HEAD
             if grep -Fxq "$CIRCLE_BRANCH" ./env_list.txt;  then
+              git pull -s recursive -X ours pantheon $CIRCLE_BRANCH --no-edit
               git push pantheon $CIRCLE_BRANCH
             else
               git push -f pantheon $CIRCLE_BRANCH
