--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,11 +65,9 @@ behat_tests: &behat_tests
           # --no-dev
     - run:
         name: Deploy to Pantheon
-        working_directory: /var/www/html
         when: on_success
         command: |
-          export PATH=/tmp/vendor/bin:/var/www/html/vendor/bin:$PATH
-          cd /var/www/html
+          export PATH=/tmp/vendor/bin:/var/www/html/vendor/bin:$PATH && cd /var/www/html
           # Don't check the repo host key
           export GIT_SSH_COMMAND="ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no"
           # Don't check for host key for Pantheon sites
@@ -77,35 +75,26 @@ behat_tests: &behat_tests
           # Make sure to log in
           # Set the user email that will commit code into Pantheon repo 
           terminus auth:login --machine-token="$eGov_Terminus" --email="$eGov_Email"
+          # Git operations
+          git remote add pantheon ssh://codeserver.dev.5c6715db-abac-4633-ada8-1c9efe354629@codeserver.dev.5c6715db-abac-4633-ada8-1c9efe354629.drush.in:2222/~/repository.git
+          git config --global user.email "$eGov_Email"
+          # Without these lines, push will fail with "please remote git submodules" error
+          rm -rf ./vendor/drupal/coder/.git && rm -rf ./web/modules/contrib/facets/.git && rm -rf ./web/modules/contrib/search_api_solr/.git
+          git add -f /var/www/html
+          # Pantheon site will use the wrong DB if the local is kept
+          git rm --cache  web/sites/default/settings.local.php --ignore-unmatch
+          git rm -r --cache web/sites/default/files --ignore-unmatch
+          git commit -m "CircleCI deployment" --quiet
           # When commit on master, we deploy to DEV
           if [[ $CIRCLE_BRANCH = "master" ]]; then
             echo "Deploy to Pantheon DEV site"
             # Set the connection type to GIT
             terminus connection:set portlandor.dev git
-            git remote add pantheon ssh://codeserver.dev.5c6715db-abac-4633-ada8-1c9efe354629@codeserver.dev.5c6715db-abac-4633-ada8-1c9efe354629.drush.in:2222/~/repository.git
-            git config --global user.email "$eGov_Email"
-            # Without these lines, push will fail with "please remote git submodules" error
-            rm -rf ./vendor/drupal/coder/.git && rm -rf ./web/modules/contrib/facets/.git && rm -rf ./web/modules/contrib/search_api_solr/.git
-            git add -f /var/www/html
-            # Pantheon site will use the wrong DB if the local is kept
-            git rm --cache  web/sites/default/settings.local.php --ignore-unmatch
-            git rm -r --cache web/sites/default/files --ignore-unmatch
-            git commit -m "CircleCI deployment" --quiet
-            # git filter-branch -f --index-filter 'git rm -rf --cached --ignore-unmatch sites/default/files' --prune-empty -- afc758c6..HEAD
             git push -f pantheon master
-            # Deploy code from local env to the new multidev site
-            # terminus env:deploy portlandor.$CIRCLE_BRANCH --sync-content --note="Manual deploy to powr-118"
-            # Cloning files and DB from dev environment to powr-118 environment
-            # terminus env:clone-content portlandor.dev "$CIRCLE_BRANCH" -y
-            # Wake up the multidev site
-            terminus env:wake portlandor.dev
-            # Check site status
-            # terminus drush portlandor.dev -- status
-            # TODO: pull DB from Live
-            # Sanitize DB
-            # terminus drush portlandor.dev -- sql-sanitize -y
-            # Clear cache
-            sleep 30s
+            # TODO: Sanitize DB here
+            # terminus env:clone-content portlandor.test dev
+            # Wake up the DEV site and must wait for 30s
+            terminus env:wake portlandor.dev && sleep 30s
             terminus remote:drush portlandor.dev -- cim -y && terminus remote:drush portlandor.dev -- cr
             # After success deployment to DEV, remove the multidev site if this is a merge of a PR
             # Read the last Git log in the master branch. Get the branch name at the end of the log.
@@ -132,25 +121,17 @@ behat_tests: &behat_tests
             else
               echo "Creating new multidev site. This may take a few seconds." && terminus multidev:create portlandor.test $CIRCLE_BRANCH
             fi
-            # Set the connect to GIT
+            # Set the connection type to GIT
             terminus connection:set portlandor.$CIRCLE_BRANCH git
-            git remote add pantheon ssh://codeserver.dev.5c6715db-abac-4633-ada8-1c9efe354629@codeserver.dev.5c6715db-abac-4633-ada8-1c9efe354629.drush.in:2222/~/repository.git
-            git config --global user.email "$eGov_Email"
-            # Without these lines, push will fail with "please remote git submodules" error
-            rm -rf ./vendor/drupal/coder/.git && rm -rf ./web/modules/contrib/facets/.git && rm -rf ./web/modules/contrib/search_api_solr/.git
-            git add -f /var/www/html
-            # Pantheon site will use the wrong DB if the local is kept
-            git rm --cache  web/sites/default/settings.local.php --ignore-unmatch && git rm -r --cache web/sites/default/files --ignore-unmatch && git commit -m "CircleCI deployment" --quiet
-            # git filter-branch -f --index-filter 'git rm -rf --cached --ignore-unmatch sites/default/files' --prune-empty -- afc758c6..HEAD
+            # Only do force push when the multidev site doesn't exist
             if grep -Fxq "$CIRCLE_BRANCH" ./env_list.txt;  then
               git pull -s recursive -X ours pantheon $CIRCLE_BRANCH --no-edit
               git push pantheon $CIRCLE_BRANCH
             else
               git push -f pantheon $CIRCLE_BRANCH
-              # Wake up the multidev site
-              terminus env:wake portlandor.$CIRCLE_BRANCH
+              # Wake up the multidev site and wait 30s.
               # The following two drush commands will fail without wait for a few seconds
-              sleep 30s
+              terminus env:wake portlandor.$CIRCLE_BRANCH && sleep 30s
             fi
             # Clear cache. Import config files
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
