CI caching test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,9 +125,11 @@ behat_tests: &behat_tests
             terminus connection:set portlandor.$CIRCLE_BRANCH git
             # Only do force push when the multidev site doesn't exist
             if grep -Fxq "$CIRCLE_BRANCH" ./env_list.txt;  then
+              rm -rf ./env_list.txt
               git pull -s recursive -X ours pantheon $CIRCLE_BRANCH --no-edit
               git push pantheon $CIRCLE_BRANCH
             else
+              rm -rf ./env_list.txt
               git push -f pantheon $CIRCLE_BRANCH
               # Wake up the multidev site and wait 30s.
               # The following two drush commands will fail without wait for a few seconds
