CI caching test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,6 +62,7 @@ behat_tests: &behat_tests
           # Remove any remaining dependencies. Install all packages form package.json 
           composer config --global --auth github-oauth.github.com "$COMPOSER_TOKEN"
           rm -rf vendor web/core web/vendor web/modules/contrib web/themes/contrib && composer install --no-interaction
+          # TODO: should only deploy non-dev packages
           # --no-dev
     - run:
         name: Deploy to Pantheon
@@ -93,8 +94,9 @@ behat_tests: &behat_tests
             git push -f pantheon master
             # TODO: Sanitize DB here
             # terminus env:clone-content portlandor.test dev
+            # Don't need to wait for DEV because it's always up?
             # Wake up the DEV site and must wait for 30s
-            terminus env:wake portlandor.dev && sleep 30s
+            # terminus env:wake portlandor.dev && sleep 30s
             terminus remote:drush portlandor.dev -- cim -y && terminus remote:drush portlandor.dev -- cr
             # After success deployment to DEV, remove the multidev site if this is a merge of a PR
             # Read the last Git log in the master branch. Get the branch name at the end of the log.
