CI caching test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,8 +73,7 @@ behat_tests: &behat_tests
           export GIT_SSH_COMMAND="ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no"
           # Don't check for host key for Pantheon sites
           echo -e "host *.drush.in\n    StrictHostKeyChecking no" >> ~/.ssh/config
-          # Make sure to log in
-          # Set the user email that will commit code into Pantheon repo 
+          # Make sure to log in. Set the user email that will commit code into Pantheon repo 
           terminus auth:login --machine-token="$eGov_Terminus" --email="$eGov_Email"
           # Git operations
           git remote add pantheon ssh://codeserver.dev.5c6715db-abac-4633-ada8-1c9efe354629@codeserver.dev.5c6715db-abac-4633-ada8-1c9efe354629.drush.in:2222/~/repository.git
@@ -142,11 +141,11 @@ behat_tests: &behat_tests
           fi
     - run:
         name: Run tests against Pantheon
-        working_directory: /var/www/html
         when: on_success
         command: |
           export PATH=/var/www/html/vendor/bin:$PATH
-          # Install Behat and its dependencies
+          # TODO: revisit this when we only deploy non-dev packages.
+          # Install Behat and its dependencies.
           # composer install
           if [[ $CIRCLE_BRANCH = "master" ]]; then
             echo 'export BEHAT_PARAMS="{\"extensions\" : {\"Behat\\\MinkExtension\" : {\"base_url\" : \"https://${HTTP_AUTH}@dev-portlandor.pantheonsite.io\"}}}"' >> $BASH_ENV && source $BASH_ENV
