CI caching test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,9 @@ behat_tests: &behat_tests
     - run:
         name: Install Terminus
         command: |
-          cd /tmp && composer require pantheon-systems/terminus
+          if [ ! -f "/tmp/vendor/pantheon-systems/terminus/bin/terminus" ] then
+            cd /tmp && composer require pantheon-systems/terminus
+          fi
     - save_cache:
         name: Save Terminus cache
         key: terminus_-{{ checksum "composer.lock" }}
