POWR-199 Theme updates and config changes for demo.

--- a/web/sites/default/config/bootstrap_barrio.settings.yml
+++ b/web/sites/default/config/bootstrap_barrio.settings.yml
@@ -1,5 +1,5 @@
 bootstrap_barrio_library: production
-bootstrap_barrio_sidebar_position: both
+bootstrap_barrio_sidebar_position: right
 bootstrap_barrio_content_offset: '0'
 bootstrap_barrio_sidebar_first_width: '4'
 bootstrap_barrio_sidebar_first_offset: '0'
