--- a/web/sites/default/config/stormy.settings.yml
+++ b/web/sites/default/config/stormy.settings.yml
@@ -31,10 +31,10 @@ favicon:
   mimetype: image/vnd.microsoft.icon
 bootstrap_barrio_library: cdn
 bootstrap_barrio_fluid_container: 0
-bootstrap_barrio_sidebar_position: left
+bootstrap_barrio_sidebar_position: right
 bootstrap_barrio_content_offset: '0'
-bootstrap_barrio_sidebar_collapse: 0
-bootstrap_barrio_sidebar_first_width: '2'
+bootstrap_barrio_sidebar_collapse: 1
+bootstrap_barrio_sidebar_first_width: '3'
 bootstrap_barrio_sidebar_first_offset: '0'
 bootstrap_barrio_sidebar_second_width: '2'
 bootstrap_barrio_sidebar_second_offset: '0'
