--- a/web/sites/default/config/views.view.group_content_menu.yml
+++ b/web/sites/default/config/views.view.group_content_menu.yml
@@ -74,7 +74,7 @@ display:
       row:
         type: fields
         options:
-          default_field_elements: true
+          default_field_elements: false
           inline:
             nid: nid
             type: type
@@ -226,7 +226,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="/group/{{ field_shortname_or_acronym|lower }}/{{ type|lower }}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">{{ type }}<span class="badge badge-primary badge-pill">{{ nid }}</span></a>'
+            text: '<a href="/{{ field_shortname_or_acronym|lower }}/{{ type|lower }}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">{{ type }}<span class="badge badge-primary badge-pill">{{ nid }}</span></a>'
             make_link: false
             path: ''
             absolute: false
