--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -98,6 +98,7 @@ module:
   shortcut: 0
   simple_oauth: 0
   simple_oauth_extras: 0
+  swiftype_integration: 0
   system: 0
   taxonomy: 0
   telephone: 0
