--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
         "drupal/group": "^1.0",
         "drupal/lightning_media": "~2.1",
         "drupal/link_class": "^1.3",
+        "drupal/maxlength": "^1.0@beta",
         "drupal/page_manager": "^4.0@beta",
         "drupal/paragraphs": "^1.1",
         "drupal/prepopulate": "^2.0",
