POWR-85 Update summary field form display setting.

--- a/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.elected_official.default.yml
@@ -42,9 +42,9 @@ content:
     weight: 3
     settings:
       placeholder: ''
-      size: 60
+      rows: 5
     third_party_settings: {  }
-    type: string_textfield
+    type: string_textarea
     region: content
   label:
     type: string_textfield
