POWR-208 Add summary to program group type

--- a/web/sites/default/config/core.entity_view_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.group.program.field_audience
     - field.field.group.program.field_official_organization_name
     - field.field.group.program.field_shortname_or_acronym
+    - field.field.group.program.field_summary
     - field.field.group.program.field_topics
     - group.type.program
 id: group.program.default
@@ -14,15 +15,23 @@ bundle: program
 mode: default
 content:
   field_audience:
-    weight: 1
+    weight: 2
     label: inline
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_summary:
+    weight: 1
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_topics:
-    weight: 2
+    weight: 3
     label: inline
     settings:
       link: true
