--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.group.program.field_audience
     - field.field.group.program.field_official_organization_name
     - field.field.group.program.field_shortname_or_acronym
+    - field.field.group.program.field_summary
     - field.field.group.program.field_topics
     - group.type.program
   module:
@@ -16,7 +17,7 @@ bundle: program
 mode: default
 content:
   field_audience:
-    weight: 3
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -37,8 +38,16 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_summary:
+    weight: 3
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    region: content
+    type: string_textarea
   field_topics:
-    weight: 4
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
