--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,7 @@
         "drupal/search_api_page": "^1.0",
         "drupal/search_api_solr": "1.x-dev",
         "drupal/swiftype": "^1.0",
+        "drupal/telephone_validation": "^2.1",
         "drupal/textarea_widget_for_text": "^1.1",
         "drupal/twig_tweak": "^2.0",
         "drupal/views_bootstrap": "^3.0",
