POWR-183 Enabled telephone_validation with drush

--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -103,6 +103,7 @@ module:
   system: 0
   taxonomy: 0
   telephone: 0
+  telephone_validation: 0
   text: 0
   textarea_widget_for_text: 0
   token: 0
