--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -123,3 +123,4 @@ copyright_block: 1.0.0-rc2
 facets: 0.0.0
 swiftype_integration: 0.0.0
 custom_add_another: 1.0.0-beta1
+telephone_validation: 2.1.0
