--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -127,3 +127,4 @@ datetime_range: 0.0.0
 inline_form_errors: 0.0.0
 entity_browser_entity_form: 0.0.0
 maxlength: 1.0.0-beta2
+telephone_validation: 2.1.0
