POWR-183 Added telephone vlaidation for US to the telphone button

--- a/web/sites/default/config/field.field.paragraph.telephone_button.field_phone_number.yml
+++ b/web/sites/default/config/field.field.paragraph.telephone_button.field_phone_number.yml
@@ -8,10 +8,15 @@ dependencies:
   module:
     - custom_add_another
     - telephone
+    - telephone_validation
 third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
+  telephone_validation:
+    format: 2
+    country:
+      - US
 id: paragraph.telephone_button.field_phone_number
 field_name: field_phone_number
 entity_type: paragraph
