--- a/web/sites/default/config/pathauto.pattern.group_title.yml
+++ b/web/sites/default/config/pathauto.pattern.group_title.yml
@@ -10,15 +10,16 @@ label: 'Group title'
 type: 'canonical_entities:group'
 pattern: '[group:field_shortname_or_acronym]'
 selection_criteria:
-  19ceae56-d96c-4aec-84f8-f48c0e7261b5:
+  d67b18c2-56ef-4a66-a36f-f24756219b4d:
     id: 'entity_bundle:group'
     bundles:
       bureau_office: bureau_office
+      elected_official: elected_official
       program: program
     negate: false
     context_mapping:
       group: group
-    uuid: 19ceae56-d96c-4aec-84f8-f48c0e7261b5
+    uuid: d67b18c2-56ef-4a66-a36f-f24756219b4d
 selection_logic: and
 weight: -10
 relationships: {  }
