POWR-85 Add module "custom_add_another" to customize Add Item label

--- a/web/sites/default/config/field.field.group.program.field_official_organization_name.yml
+++ b/web/sites/default/config/field.field.group.program.field_official_organization_name.yml
@@ -5,6 +5,12 @@ dependencies:
   config:
     - field.storage.group.field_official_organization_name
     - group.type.program
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: group.program.field_official_organization_name
 field_name: field_official_organization_name
 entity_type: group
