--- a/web/sites/default/config/field.field.media.tweet.embed_code.yml
+++ b/web/sites/default/config/field.field.media.tweet.embed_code.yml
@@ -5,6 +5,12 @@ dependencies:
   config:
     - field.storage.media.embed_code
     - media.type.tweet
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 _core:
   default_config_hash: gQ7Nc5kgjpvgODjixeCLpGX65Pj_o8P2jtevAOtdh0w
 id: media.tweet.embed_code
