--- a/web/sites/default/config/field.field.media.video.field_media_video_embed_field.yml
+++ b/web/sites/default/config/field.field.media.video.field_media_video_embed_field.yml
@@ -6,7 +6,12 @@ dependencies:
     - field.storage.media.field_media_video_embed_field
     - media.type.video
   module:
+    - custom_add_another
     - video_embed_field
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 _core:
   default_config_hash: pTxGhGrRqGET7TkQR6uWvcnXvGFcsQm1SlMMv1_LARI
 id: media.video.field_media_video_embed_field
