--- a/web/sites/default/config/field.field.node.building.field_address.yml
+++ b/web/sites/default/config/field.field.node.building.field_address.yml
@@ -7,6 +7,11 @@ dependencies:
     - node.type.building
   module:
     - address
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: node.building.field_address
 field_name: field_address
 entity_type: node
@@ -33,4 +38,5 @@ settings:
     additionalName: '0'
     familyName: '0'
   langcode_override: ''
+  field_overrides: {  }
 field_type: address
