--- a/web/sites/default/config/field.field.node.city_service.field_service_mode.yml
+++ b/web/sites/default/config/field.field.node.city_service.field_service_mode.yml
@@ -7,7 +7,12 @@ dependencies:
     - node.type.city_service
     - paragraphs.paragraphs_type.service_mode
   module:
+    - custom_add_another
     - entity_reference_revisions
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: node.city_service.field_service_mode
 field_name: field_service_mode
 entity_type: node
