--- a/web/sites/default/config/field.field.node.service_location.field_get_directions.yml
+++ b/web/sites/default/config/field.field.node.service_location.field_get_directions.yml
@@ -6,7 +6,12 @@ dependencies:
     - field.storage.node.field_get_directions
     - node.type.service_location
   module:
+    - custom_add_another
     - link
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: node.service_location.field_get_directions
 field_name: field_get_directions
 entity_type: node
