--- a/web/sites/default/config/field.field.paragraph.form_app_button.field_form_button.yml
+++ b/web/sites/default/config/field.field.paragraph.form_app_button.field_form_button.yml
@@ -6,7 +6,12 @@ dependencies:
     - field.storage.paragraph.field_form_button
     - paragraphs.paragraphs_type.form_app_button
   module:
+    - custom_add_another
     - link
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: paragraph.form_app_button.field_form_button
 field_name: field_form_button
 entity_type: paragraph
