--- a/web/sites/default/config/field.field.paragraph.service_mode.field_service_modes.yml
+++ b/web/sites/default/config/field.field.paragraph.service_mode.field_service_modes.yml
@@ -6,6 +6,12 @@ dependencies:
     - field.storage.paragraph.field_service_modes
     - paragraphs.paragraphs_type.service_mode
     - taxonomy.vocabulary.city_service_modes
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: paragraph.service_mode.field_service_modes
 field_name: field_service_modes
 entity_type: paragraph
