--- a/web/sites/default/config/field.field.paragraph.service_mode.field_step_by_step_instructions.yml
+++ b/web/sites/default/config/field.field.paragraph.service_mode.field_step_by_step_instructions.yml
@@ -7,7 +7,12 @@ dependencies:
     - paragraphs.paragraphs_type.service_mode
     - paragraphs.paragraphs_type.service_step
   module:
+    - custom_add_another
     - entity_reference_revisions
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: paragraph.service_mode.field_step_by_step_instructions
 field_name: field_step_by_step_instructions
 entity_type: paragraph
