--- a/web/sites/default/config/field.field.paragraph.service_step.field_step_action_button.yml
+++ b/web/sites/default/config/field.field.paragraph.service_step.field_step_action_button.yml
@@ -10,7 +10,12 @@ dependencies:
     - paragraphs.paragraphs_type.service_step
     - paragraphs.paragraphs_type.telephone_button
   module:
+    - custom_add_another
     - entity_reference_revisions
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: paragraph.service_step.field_step_action_button
 field_name: field_step_action_button
 entity_type: paragraph
