--- a/web/sites/default/config/field.field.paragraph.service_step.field_step_instruction.yml
+++ b/web/sites/default/config/field.field.paragraph.service_step.field_step_instruction.yml
@@ -6,7 +6,12 @@ dependencies:
     - field.storage.paragraph.field_step_instruction
     - paragraphs.paragraphs_type.service_step
   module:
+    - custom_add_another
     - text
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: paragraph.service_step.field_step_instruction
 field_name: field_step_instruction
 entity_type: paragraph
