--- a/web/sites/default/config/field.field.taxonomy_term.city_service_modes.field_mode_shortname.yml
+++ b/web/sites/default/config/field.field.taxonomy_term.city_service_modes.field_mode_shortname.yml
@@ -5,6 +5,12 @@ dependencies:
   config:
     - field.storage.taxonomy_term.field_mode_shortname
     - taxonomy.vocabulary.city_service_modes
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: taxonomy_term.city_service_modes.field_mode_shortname
 field_name: field_mode_shortname
 entity_type: taxonomy_term
