--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "drupal/console": "^1.0.2",
         "drupal/copyright_block": "^1.0@RC",
         "drupal/core": "~8.5",
+        "drupal/custom_add_another": "^1.0@beta",
         "drupal/ds": "^3.1",
         "drupal/eva": "^1.3",
         "drupal/facets": "1.x-dev",
