--- a/web/sites/default/config/field.field.group.bureau_office.field_audience.yml
+++ b/web/sites/default/config/field.field.group.bureau_office.field_audience.yml
@@ -6,6 +6,12 @@ dependencies:
     - field.storage.group.field_audience
     - group.type.bureau_office
     - taxonomy.vocabulary.audience
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: group.bureau_office.field_audience
 field_name: field_audience
 entity_type: group
