--- a/web/sites/default/config/field.field.group.bureau_office.field_shortname_or_acronym.yml
+++ b/web/sites/default/config/field.field.group.bureau_office.field_shortname_or_acronym.yml
@@ -5,6 +5,12 @@ dependencies:
   config:
     - field.storage.group.field_shortname_or_acronym
     - group.type.bureau_office
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: group.bureau_office.field_shortname_or_acronym
 field_name: field_shortname_or_acronym
 entity_type: group
