--- a/web/sites/default/config/field.field.group.elected_official.field_bureaus.yml
+++ b/web/sites/default/config/field.field.group.elected_official.field_bureaus.yml
@@ -6,6 +6,12 @@ dependencies:
     - field.storage.group.field_bureaus
     - group.type.bureau_office
     - group.type.elected_official
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: 'Add another bureau or office'
+    custom_remove: ''
 id: group.elected_official.field_bureaus
 field_name: field_bureaus
 entity_type: group
