--- a/web/sites/default/config/field.field.group.elected_official.field_official_title.yml
+++ b/web/sites/default/config/field.field.group.elected_official.field_official_title.yml
@@ -5,6 +5,12 @@ dependencies:
   config:
     - field.storage.group.field_official_title
     - group.type.elected_official
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: group.elected_official.field_official_title
 field_name: field_official_title
 entity_type: group
