--- a/web/sites/default/config/field.field.group.program.field_topics.yml
+++ b/web/sites/default/config/field.field.group.program.field_topics.yml
@@ -6,6 +6,12 @@ dependencies:
     - field.storage.group.field_topics
     - group.type.program
     - taxonomy.vocabulary.topics
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: group.program.field_topics
 field_name: field_topics
 entity_type: group
