--- a/web/sites/default/config/field.field.group_content.bureau_office-group_membership.group_roles.yml
+++ b/web/sites/default/config/field.field.group_content.bureau_office-group_membership.group_roles.yml
@@ -5,6 +5,12 @@ dependencies:
   config:
     - field.storage.group_content.group_roles
     - group.content_type.bureau_office-group_membership
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: group_content.bureau_office-group_membership.group_roles
 field_name: group_roles
 entity_type: group_content
