--- a/web/sites/default/config/field.field.media.document.field_document.yml
+++ b/web/sites/default/config/field.field.media.document.field_document.yml
@@ -6,7 +6,12 @@ dependencies:
     - field.storage.media.field_document
     - media.type.document
   module:
+    - custom_add_another
     - file
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 _core:
   default_config_hash: f7bnl0YEQNufiBJE33He44yXOU2kf-QBrmvz_7SVDB8
 id: media.document.field_document
