--- a/web/sites/default/config/field.field.media.document.field_media_in_library.yml
+++ b/web/sites/default/config/field.field.media.document.field_media_in_library.yml
@@ -5,6 +5,12 @@ dependencies:
   config:
     - field.storage.media.field_media_in_library
     - media.type.document
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 _core:
   default_config_hash: ZLm6OBUHR-FbAUNVBxvsnDzMQoY7JUlrEYi_iFqdmUs
 id: media.document.field_media_in_library
