--- a/web/sites/default/config/field.field.media.image.field_media_in_library.yml
+++ b/web/sites/default/config/field.field.media.image.field_media_in_library.yml
@@ -5,6 +5,12 @@ dependencies:
   config:
     - field.storage.media.field_media_in_library
     - media.type.image
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 _core:
   default_config_hash: k4k5Gp34fkQ4u-AiE0sR5rIahNKHd4hPh_G9BX7-BKU
 id: media.image.field_media_in_library
