--- a/web/sites/default/config/field.field.media.image.image.yml
+++ b/web/sites/default/config/field.field.media.image.image.yml
@@ -6,7 +6,12 @@ dependencies:
     - field.storage.media.image
     - media.type.image
   module:
+    - custom_add_another
     - image
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 _core:
   default_config_hash: SeXevf_nAcTV6VfNvKi2rz-DMQGpeIPJxfu_r_uT0PU
 id: media.image.image
