--- a/web/sites/default/config/field.field.media.instagram.embed_code.yml
+++ b/web/sites/default/config/field.field.media.instagram.embed_code.yml
@@ -5,6 +5,12 @@ dependencies:
   config:
     - field.storage.media.embed_code
     - media.type.instagram
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 _core:
   default_config_hash: L2i3lZTwf86RXzV6iD5u___bn48PaYgwDqd0W2qxPpw
 id: media.instagram.embed_code
