--- a/web/sites/default/config/field.field.media.tweet.field_media_in_library.yml
+++ b/web/sites/default/config/field.field.media.tweet.field_media_in_library.yml
@@ -5,6 +5,12 @@ dependencies:
   config:
     - field.storage.media.field_media_in_library
     - media.type.tweet
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 _core:
   default_config_hash: Vu7aDQE5B_ZXzGFirW2FnEkCIVoxEuGQPeVfuk443vI
 id: media.tweet.field_media_in_library
