--- a/web/sites/default/config/field.field.media.video.field_media_in_library.yml
+++ b/web/sites/default/config/field.field.media.video.field_media_in_library.yml
@@ -5,6 +5,12 @@ dependencies:
   config:
     - field.storage.media.field_media_in_library
     - media.type.video
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 _core:
   default_config_hash: UDu8TgtylsU3kQVfxF7PTHXPLfuFeiPr6GV379CddbM
 id: media.video.field_media_in_library
