--- a/web/sites/default/config/field.field.node.city_service.field_audience.yml
+++ b/web/sites/default/config/field.field.node.city_service.field_audience.yml
@@ -6,6 +6,12 @@ dependencies:
     - field.storage.node.field_audience
     - node.type.city_service
     - taxonomy.vocabulary.audience
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: node.city_service.field_audience
 field_name: field_audience
 entity_type: node
