--- a/web/sites/default/config/field.field.node.city_service.field_related_services.yml
+++ b/web/sites/default/config/field.field.node.city_service.field_related_services.yml
@@ -5,6 +5,12 @@ dependencies:
   config:
     - field.storage.node.field_related_services
     - node.type.city_service
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: node.city_service.field_related_services
 field_name: field_related_services
 entity_type: node
