--- a/web/sites/default/config/field.field.node.information.field_body.yml
+++ b/web/sites/default/config/field.field.node.information.field_body.yml
@@ -7,7 +7,12 @@ dependencies:
     - node.type.information
     - paragraphs.paragraphs_type.simple_text
   module:
+    - custom_add_another
     - entity_reference_revisions
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: node.information.field_body
 field_name: field_body
 entity_type: node
