--- a/web/sites/default/config/field.field.node.service_location.field_building.yml
+++ b/web/sites/default/config/field.field.node.service_location.field_building.yml
@@ -6,6 +6,12 @@ dependencies:
     - field.storage.node.field_building
     - node.type.building
     - node.type.service_location
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: node.service_location.field_building
 field_name: field_building
 entity_type: node
