--- a/web/sites/default/config/field.field.node.service_location.field_floor.yml
+++ b/web/sites/default/config/field.field.node.service_location.field_floor.yml
@@ -5,6 +5,12 @@ dependencies:
   config:
     - field.storage.node.field_floor
     - node.type.service_location
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: node.service_location.field_floor
 field_name: field_floor
 entity_type: node
