--- a/web/sites/default/config/field.field.node.service_location.field_open_hours.yml
+++ b/web/sites/default/config/field.field.node.service_location.field_open_hours.yml
@@ -5,6 +5,12 @@ dependencies:
   config:
     - field.storage.node.field_open_hours
     - node.type.service_location
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: node.service_location.field_open_hours
 field_name: field_open_hours
 entity_type: node
