--- a/web/sites/default/config/field.field.paragraph.email_button.field_email_link.yml
+++ b/web/sites/default/config/field.field.paragraph.email_button.field_email_link.yml
@@ -5,6 +5,12 @@ dependencies:
   config:
     - field.storage.paragraph.field_email_link
     - paragraphs.paragraphs_type.email_button
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: paragraph.email_button.field_email_link
 field_name: field_email_link
 entity_type: paragraph
