--- a/web/sites/default/config/field.field.paragraph.location.field_service_location.yml
+++ b/web/sites/default/config/field.field.paragraph.location.field_service_location.yml
@@ -6,6 +6,12 @@ dependencies:
     - field.storage.paragraph.field_service_location
     - node.type.service_location
     - paragraphs.paragraphs_type.location
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: paragraph.location.field_service_location
 field_name: field_service_location
 entity_type: paragraph
