--- a/web/sites/default/config/field.field.paragraph.service_mode.field_time_to_complete.yml
+++ b/web/sites/default/config/field.field.paragraph.service_mode.field_time_to_complete.yml
@@ -5,6 +5,12 @@ dependencies:
   config:
     - field.storage.paragraph.field_time_to_complete
     - paragraphs.paragraphs_type.service_mode
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: paragraph.service_mode.field_time_to_complete
 field_name: field_time_to_complete
 entity_type: paragraph
