--- a/web/sites/default/config/field.field.paragraph.service_step.field_step_title.yml
+++ b/web/sites/default/config/field.field.paragraph.service_step.field_step_title.yml
@@ -5,6 +5,12 @@ dependencies:
   config:
     - field.storage.paragraph.field_step_title
     - paragraphs.paragraphs_type.service_step
+  module:
+    - custom_add_another
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: paragraph.service_step.field_step_title
 field_name: field_step_title
 entity_type: paragraph
