--- a/web/sites/default/config/field.field.paragraph.simple_text.field_text.yml
+++ b/web/sites/default/config/field.field.paragraph.simple_text.field_text.yml
@@ -6,7 +6,12 @@ dependencies:
     - field.storage.paragraph.field_text
     - paragraphs.paragraphs_type.simple_text
   module:
+    - custom_add_another
     - text
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: paragraph.simple_text.field_text
 field_name: field_text
 entity_type: paragraph
