--- a/web/sites/default/config/field.field.paragraph.telephone_button.field_phone_number.yml
+++ b/web/sites/default/config/field.field.paragraph.telephone_button.field_phone_number.yml
@@ -6,7 +6,12 @@ dependencies:
     - field.storage.paragraph.field_phone_number
     - paragraphs.paragraphs_type.telephone_button
   module:
+    - custom_add_another
     - telephone
+third_party_settings:
+  custom_add_another:
+    custom_add_another: ''
+    custom_remove: ''
 id: paragraph.telephone_button.field_phone_number
 field_name: field_phone_number
 entity_type: paragraph
