POWR-203 Add Mike's docker files to .gitignore to help Julie troubleshoot.

--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,11 @@ package-lock.json
 # Exclude Sass temp files. #
 ########
 .sass-cache/*
+
+# Exclude Mike's docker sutff. #
+########
+docker-compose.yml
+site.conf
+log.conf
+php.Dockerfile
+php.ini
