POWR-86 Add the Project group type

--- a/web/sites/default/config/pathauto.pattern.group_title.yml
+++ b/web/sites/default/config/pathauto.pattern.group_title.yml
@@ -10,16 +10,17 @@ label: 'Group title'
 type: 'canonical_entities:group'
 pattern: '[group:field_shortname_or_acronym]'
 selection_criteria:
-  d67b18c2-56ef-4a66-a36f-f24756219b4d:
+  42fe425e-aa59-40dd-8f6e-f24608e2decb:
     id: 'entity_bundle:group'
     bundles:
+      project: project
       bureau_office: bureau_office
       elected_official: elected_official
       program: program
     negate: false
     context_mapping:
       group: group
-    uuid: d67b18c2-56ef-4a66-a36f-f24756219b4d
+    uuid: 42fe425e-aa59-40dd-8f6e-f24608e2decb
 selection_logic: and
 weight: -10
 relationships: {  }
