POWR-189 Add shortcuts: My groups and My content

--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -11,6 +11,7 @@ is_admin: false
 permissions:
   - 'access content'
   - 'access contextual links'
+  - 'access shortcuts'
   - 'access site-wide contact form'
   - 'access toolbar'
   - 'view media'
