POWR-215 Create Fax button type and add it to service steps

--- a/web/sites/default/config/field.field.paragraph.service_step.field_step_action_button.yml
+++ b/web/sites/default/config/field.field.paragraph.service_step.field_step_action_button.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.paragraph.field_step_action_button
     - paragraphs.paragraphs_type.email_button
+    - paragraphs.paragraphs_type.fax_button
     - paragraphs.paragraphs_type.form_app_button
     - paragraphs.paragraphs_type.location
     - paragraphs.paragraphs_type.service_step
@@ -34,6 +35,7 @@ settings:
       form_app_button: form_app_button
       email_button: email_button
       telephone_button: telephone_button
+      fax_button: fax_button
       location: location
     target_bundles_drag_drop:
       form_app_button:
@@ -51,6 +53,9 @@ settings:
       telephone_button:
         enabled: true
         weight: 8
+      fax_button:
+        enabled: true
+        weight: 9
       location:
         enabled: true
         weight: 10
